--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,29 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* 픽셀 정렬을 위한 전역 스타일 */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+/* 픽셀 아트 이미지 최적화 */
+img {
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
